--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = "hal.rdfsearch.RDFSearch"
+mainClassName = 'hal.rdfsearch.RDFSearch'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -28,6 +28,6 @@ dependencies {
 }
 
 run {
-    /* Need to split the space-delimited value in the exec.args */
-    args System.getProperty("exec.args").split()
+    // Need to split the space-delimited value in the exec.args
+    args System.getProperty('exec.args').split()
 }
