feat(rdf): migre le projet vers Jena 3

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    compile(group: 'org.apache.jena', name: 'apache-jena-libs', version: '2.12.1') {
+    compile(group: 'org.apache.jena', name: 'apache-jena-libs', version: '3.1.1') {
         exclude(module: 'slf4j-log4j12')
         exclude(module: 'log4j')
     }
@@ -29,5 +29,5 @@ dependencies {
 
 run {
     // Need to split the space-delimited value in the exec.args
-    args System.getProperty('exec.args').split()
+    //args System.getProperty('exec.args').split()
 }
